--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
 <canvas id='myCanvas' width='480px' height='320px'></canvas>
 <script src="./js/player.js"></script>
+<script src="./js/mobHandler.js"></script>
 <script src="./js/gun.js"></script>
 <script src="./js/renderer.js"></script>
 <script src="./js/game.js"></script>
