--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html>
 <head>
+	<style>
+		canvas {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			background-color: white;
+		}
+		body {
+			background-color: black;
+		}
+	</style>
 </head>
 <body>
 <canvas id='myCanvas' width='480px' height='320px'></canvas>
