--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
 <head>
+	<audio id="powerUpSound" src="power.wav" preload="auto"></audio>
+	<audio id="hitSound" src="hit.wav" preload="auto"></audio>
+	<audio id="shootSound" src="shoot.wav" preload="auto"></audio>
+	<audio id="explosionSound" src="explosion.wav" preload="auto"></audio>
 	<style>
 		canvas {
 			display: block;
@@ -9,7 +13,7 @@
 			background-color: white;
 		}
 		body {
-			background-color: black;
+			background-color: silver;
 		}
 	</style>
 </head>
@@ -19,6 +23,7 @@
 <script src="./js/mobHandler.js"></script>
 <script src="./js/gun.js"></script>
 <script src="./js/renderer.js"></script>
+<script src="./js/powerUpHandler.js"></script>
 <script src="./js/game.js"></script>
 <script src="./js/controller.js"></script>
 </body>
